<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/textViewHeading">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/title"
            android:textSize="25sp"
            android:textStyle="normal" />


        <Button
            android:id="@+id/buttonApp1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/textViewHeading"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_300"
            android:padding="16dp"
            android:text="@string/app1_name"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonApp2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/buttonApp1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_300"
            android:padding="16dp"
            android:text="@string/app2_name"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonApp3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/buttonApp2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_300"
            android:padding="16dp"
            android:text="@string/app3_name"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonApp4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/buttonApp3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_300"
            android:padding="16dp"
            android:text="@string/app4_name"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonApp5"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/buttonApp4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/teal_300"
            android:padding="16dp"
            android:text="@string/app5_name"
            android:textColor="@color/white" />


    </RelativeLayout>
</ScrollView>

